--- a/_data/members.yml
+++ b/_data/members.yml
@@ -110,7 +110,7 @@
   type: alumni
   photo: people/kchen.jpg
   info: |
-    Cyngn
+    Field AI
     PhD, UCLA 2023
     <a href="mailto:kennyjchen@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.kennyjchen.com/">Website</a>
 
