--- a/_data/research.yml
+++ b/_data/research.yml
@@ -8,9 +8,9 @@
   description: "This research project expands trajectory planning for vertical take-off and landing (VTOL) vehicles to long-range distances with real-time calculation. Research involves effective methods to smoothly connect motion primitives while preserving path optimality and retaining fast computation."
   researchers: H. Levy
 
-- title: "Traversability-aware Multi-Robot Task Assignment"
-  image: research/TSOTAN.png
-  description: "This research project improves on state-of-the-art task assignment algorithms by using robot specific path planning instead of distance or application specific heuristics. In addition to creating more representative cost functions, this method also considers heterogeneity amongst robot teams by leveraging existing traversability assessment and path planning modules."
+- title: "Submodular Optimization in LiDAR Perception for Mobile Robotics"
+  image: research/David_Research_Image.png
+  description: "This research uses submodular optimization to solve NP-hard problems in LiDAR perception with provably near-optimal performance. A key line of work involves development of a novel streaming submodular algorithm which can generate summaries for large mapping sessions and submaps for planning applications in under one second."
   researchers: D. Thorne
 
 - title: "Multi-Agent Interaction with Tumbling Objects in Orbit"
