--- a/_data/members.yml
+++ b/_data/members.yml
@@ -65,6 +65,14 @@
     <b>Research</b>: Trajectory Optimization
     <a href="mailto:edenzafran@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/edenzafran/">Website</a>
 
+- name: Qiyuan Wu
+  type: grad
+  photo: people/bwu.jpg
+  info: |
+    MS Student, MAE
+    BS, UCLA 2025
+    <b>Research</b>: Trajectory Optimization
+    <a href="mailto:billwu67@g.ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://sites.google.com/d/1G31BD7WG3hxETU4i-FlgjvbPQr8Y8Izf/p/1lbVZSZsAYdWf5w0rIR6SF3ATBDS4hguu/edit">Website</a>
 
 ### Undergrads ###
 - name: Krithi Koodli
