--- a/_data/members.yml
+++ b/_data/members.yml
@@ -17,7 +17,7 @@
     MS, UCLA 2022
     BS, UC Santa Barbara 2020
     <b>Research</b>: Trajectory Planning
-    <a href="mailto:hjlevy@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://helenelevy.wixsite.com/portfolio">Website</a>
+    <a href="mailto:hjlevy@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://hjlevy.github.io/">Website</a>
 
 - name: Samuel Gessow
   type: grad
