--- a/_data/research.yml
+++ b/_data/research.yml
@@ -4,7 +4,7 @@
 #   researchers: K. Chen, R. Nemiroff
 
 - title: "Real-time Trajectory Planning with Motion Primitive Search"
-  image: research/time_optimal_plan.gif
+  image: research/planning.png
   description: "This research project expands trajectory planning for vertical take-off and landing (VTOL) vehicles to long-range distances with real-time calculation. Research involves effective methods to smoothly connect motion primitives while preserving path optimality and retaining fast computation."
   researchers: H. Levy
 
